--- a/labs/solutions/async/webworker/index.html
+++ b/labs/solutions/async/webworker/index.html
@@ -18,7 +18,7 @@
             We're gong to use the CatAPI this time, which, well delivers us
             cats. Our Web Worker will do the fetching of our image data from the CatAPI:
         </p>
-        <p><code><a href='http://thecatapi.com/api/images/get'>http://thecatapi.com/api/images/get</a></code></p>
+        <p><code><a href='https://api.thecatapi.com/v1/images/search?&mime_types=image/gif'>https://api.thecatapi.com/v1/images/search?&mime_types=image/gif</a></code></p>
         <p>
             Then, we're going to combine a <code>setInterval()</code> call every 5s to
             move between each image in the output div. This is a super pared down example of how real-world long
